--- a/gallery.html
+++ b/gallery.html
@@ -89,57 +89,57 @@
 <ul class="clearfix">
 
 <li>
-<a href="images/gallery1.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery1.jpg">
+<a href="images/gallery1.JPG" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery1.JPG">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div></a>
 </li>
 
 <li>
-<a href="images/gallery2.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery2.jpg">
+<a href="images/gallery2.JPG" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery2.JPG">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery3.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery3.jpg">
+<a href="images/gallery3.JPG" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery3.JPG">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery4.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery4.jpg">
+<a href="images/gallery4.JPG" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery4.JPG">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery5.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery5.jpg">
+<a href="images/gallery5.JPG" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery5.JPG">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery6.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery6.jpg">
+<a href="images/gallery6.JPG" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery6.JPG">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery7.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery7.jpg">
+<a href="images/gallery7.JPG" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery7.JPG">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
 </li>
 <li>
-<a href="images/gallery8.jpg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery8.jpg">
+<a href="images/gallery8.JPG" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery8.JPG">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
