--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 <li><a href="index.html">Home</a></li>
 <li><a href="about-us.html">About Us</a></li>
-
-
+<li><a href="#">Ilyas 20</a></li>
+<li><a href="our-visitors.html">Our Visitors</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="contact.html">Contact Us</a></li>
 </ul>
@@ -123,14 +123,20 @@
 <section id="about-sec">
 <div class="container">
 <div class="row text-center">
-<h1 style="background-color:cadetblue;color:white;">APPEAL</h1>
+<h1 style="background-color:cadetblue;color:white;">A HUMBLE APPEAL</h1>
 
 
-<p style="text-align:justify; margin:2rem;color:black;">A HUMBLE APPEAL
-Without doubt, Deeni Madaris are not only for preservation of Deen and Islam, but also they have an important and distinguished role in the formation of a good society. Jamia Zakariyya is of the same kind, serving and imparting education since last few years in East Champaran, Bihar. Jamia Zakariyya is working as per the guide lines directed by great Ulama and wise people of the nation. Jamia Zakariyya has done in the last few years eye opening services in the field of education and Dawat and Tabligh. Different Makatib are running in different regions wherein thousands of students are extinguishing their educational thirst. Jamia is also working in different fields as to sponsorship of widows, marriage of poor girls, scholarships for the poor students and different other social and inhabitation activities. Jamia Zakariyya is heading towards its destination with pomp and show. It stands in financial and moral crying needs in order to precede all religious activities. Well wishers are requested to participate in different activities and try their level best for its strength. Jamia spends Zakat, Sadagat and donations sparingly. All are requested to take part in the activities of Jamia, and to direct other people's attentions to it. Allah will make it (insha Allah) a cause for salvation in the hereafter.
-(MUFTI) MOHAMMAD AHMED QASMI 
-Mohtamim of Jamia Zakariyya, Dhaka, 
-Dist. East Champaran, Bihar (India).</p>
+<p style="text-align:justify; margin:2rem;color:black;">
+Without doubt, Deeni Madaris are not only for preservation of Deen and Islam, but also they have an important and distinguished role in the formation of a good society. Jamia Zakariyya is of the same kind, serving and imparting education since last few years in East Champaran, Bihar. Jamia Zakariyya is working as per the guide lines directed by great Ulama and wise people of the nation. Jamia Zakariyya has done in the last few years eye opening services in the field of education and Dawat and Tabligh. Different Makatib are running in different regions wherein thousands of students are extinguishing their educational thirst. Jamia is also working in different fields as to sponsorship of widows, marriage of poor girls, scholarships for the poor students and different other social and inhabitation activities. Jamia Zakariyya is heading towards its destination with pomp and show. It stands in financial and moral crying needs in order to precede all religious activities. Well wishers are requested to participate in different activities and try their level best for its strength. Jamia spends Zakat, Sadagat and donations sparingly. All are requested to take part in the activities of Jamia, and to direct other people's attentions to it. Allah will make it (insha Allah) a cause for salvation in the hereafter.</p>
+<br>
+
+<p align="left" style="font-size:large;font-weight:bold;text-align:justify; ">
+<img src="images/mufti-sb.JPG" class="img-responsive" align="left"  style="margin:0rem;width:10%;"/>
+&nbsp;&nbsp;
+
+MUFTI MOHAMMAD AHMED QASMI. <br>
+&nbsp;&nbsp;&nbsp;Mohtamim of Jamia Zakariyya, Dhaka.<br> 
+&nbsp;&nbsp;&nbsp;Dist. East Champaran, Bihar (India).</p>
 
 
 </div>
@@ -191,7 +197,7 @@ Dist. East Champaran, Bihar (India).</p>
 						<h4 class="footer-section-title">Contact Us</h4><!-- /.footer-section-title -->
 						
 						<div class="footer-section-body">
-							<p><b>Address:</b> Jamia Zakariya Dhaka, East Champaran, Bihar -845401 ( INDIA ) </p>
+							<p><b>Address:</b> Jamia Zakariyya Dhaka, East Champaran, Bihar -845401 ( INDIA ) </p>
 
 							<div class="footer-contacts">
 								<p>
