--- a/about-us.html
+++ b/about-us.html
@@ -56,9 +56,12 @@
 <a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/></a>
 </div>
 <div class="collapse navbar-collapse" id="navbar-menu">
+
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 <li><a href="index.html">Home</a></li>
 <li><a href="about-us.html">About Us</a></li>
+<li><a href="#">Ilyas 20</a></li>
+<li><a href="our-visitors.html">Our Visitors</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="contact.html">Contact Us</a></li>
 </ul>
@@ -89,7 +92,7 @@
 
 Undoubtedly Islamic madrassas are shining like a beacon of light in the face of modern challenges and it is quite clear that these madrassas are the custodians of all Islamic activities and the guarantors of the protection of Islam.  Praise be to Allah. The network of religious schools is spread all over India as a result of the sacrifices of the ulema and eminent scholars and all the ulema and preachers of Islam are engaged in the propagation of Islamic sciences.
 Jamia Zakariyya Dhaka is also a golden link in the chain that is doing well in the field of religious reform, welfare and education in Dhaka the border area of ​​Indo-Nepal.  In a very short span of time, Jamia Zakariyya has gained a privileged position in the eyes of eminent scholars of the country and abroad due to its excellent performance.  Jamia Zakariyya Dhaka was established in 2002.  The foundation of  Jamia Zakariyya came into being in view of the educational and economic backwardness of the region.  At present dozens of  Makatib are running all over Bihar under Jamia.
-Except for the days of the global epidemic, the total number of students studying in the Jamia and its branches has exceeded 1500, while the number of students residing in the university headquarters was 450, which was fully sponsored by the Jamia.  Due to this world pandemic, the number of students was kept low for the last two years.  For the education and training of the youngsters of the nation who are studying in the Jamia and its branches, more than 30 sincere and experienced Teachers are engaged in carrying out their responsibilities diligently.
+Except for the days of the global epidemic, the total number of students studying in the Jamia and its branches has exceeded 1500, while the number of students residing in the university headquarters was 250, which was fully sponsored by the Jamia.  Due to this world pandemic, the number of students was kept low for the last two years.  For the education and training of the youngsters of the nation who are studying in the Jamia and its branches, more than 30 sincere and experienced Teachers are engaged in carrying out their responsibilities diligently.
 The scope of activities and services of the company is increasing day by day, due to which the expenses are also increasing dramatically.  From the beginning of the covid-19, the university faced severe financial difficulties. Meanwhile, the self-founder of Jamia, Al Haaj Hazrat Maulana Mufti Muhammad Ilyas Mazaheri Nawwarallahu Marqadahu (died on May 3, 2020 according to the holy month of Ramadan 10, 1442 AH), was pronounced dead after a short illness, due to which financial difficulties have doubled, Repayment of past and present debt is very important.
 The nation should also pay special attention to this.  It is kindly requested to all the well-wishers, social and national workers and the children of Tawheed who have religious support to participate in the fulfillment of the educational and construction needs of the Jamia and also to draw the attention of their friends towards this good deeds.  May Allah reward him according to his dignity and may Allah the Lord of  Glory, be our supporter and helper.
 
