--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,17 @@
 <a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/></a>
 </div>
 <div class="collapse navbar-collapse" id="navbar-menu">
+
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 <li><a href="index.html">Home</a></li>
 <li><a href="about-us.html">About Us</a></li>
+<li><a href="#">Ilyas 20</a></li>
+<li><a href="our-visitors.html">Our Visitors</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="contact.html">Contact Us</a></li>
 </ul>
+</ul>
+
 </div>
 </div>
 </div>
