--- a/gallery.html
+++ b/gallery.html
@@ -57,9 +57,13 @@
 <a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/></a>
 </div>
 <div class="collapse navbar-collapse" id="navbar-menu">
+
+
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 <li><a href="index.html">Home</a></li>
 <li><a href="about-us.html">About Us</a></li>
+<li><a href="#">Ilyas 20</a></li>
+<li><a href="our-visitors.html">Our Visitors</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="contact.html">Contact Us</a></li>
 </ul>
@@ -130,6 +134,8 @@
 </div>
 </a>
 </li>
+
+<!--
 <li>
 <a href="images/gallery7.JPG" class="swipebox" title="My Caption">
 <div class="image"><img src="images/gallery7.JPG">
@@ -144,6 +150,10 @@
 </div>
 </a>
 </li>
+
+-->
+
+
 </ul>
 </div>
 </div>
@@ -213,6 +223,8 @@
 </div>
 </a>
 </li>
+
+
 <li>
 <a href="images/wf8.jpg" class="swipebox" title="My Caption">
 <div class="image"><img src="images/wf8.jpg">
@@ -221,9 +233,35 @@
 </a>
 </li>
 </ul>
+
+<ul class="clearfix">
+
+<li>
+<a href="images/wf9.jpg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/wf9.jpg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+
+
+<li>
+<a href="images/wf10.jpg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/wf10.jpg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+
+
+</ul>
+
+
 </div>
 </div>
 </section>
+
+
 
 
 <footer class="footer">
