--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Without doubt, Deeni Madaris are not only for preservation of Deen and Islam, bu
 <br>
 
 <p align="left" style="font-size:large;font-weight:bold;text-align:justify; ">
-<img src="images/mufti-sb.JPG" class="img-responsive" align="left"  style="margin:0rem;width:10%;"/>
+<img src="images/mufti-sb.jpg" class="img-responsive" align="left"  style="margin:0rem;width:10%;"/>
 &nbsp;&nbsp;
 
 MUFTI MOHAMMAD AHMED QASMI. <br>
