--- a/gallery.html
+++ b/gallery.html
@@ -121,8 +121,8 @@
 </a>
 </li>
 <li>
-<a href="images/gallery5.JPG" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery5.JPG">
+<a href="images/gallery5.jpg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery5.jpg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div>
 </a>
