--- a/our-visitors.html
+++ b/our-visitors.html
@@ -89,41 +89,91 @@
 
 <p  style="text-align:justify; margin:2rem;color:black;">
 
-(1) Mufakkire Islam, Muhaddith of his time, Hazrat Maulana Sayyed Mohd. Salman Sb (Principal: Jamia Mazaihir Uloom, Saharanpur. U.P)<br>
-(2) Hazrat Maulana Ibrahim Sb. Mazahiri, Mohtamim Jamia Oasm Kharod, Dist Bharuch, Gujarat.<br>
-(3) Hazrat Maulana Ibrahim sb Choksi, Hadith & Tafseer teacher at Darul Uloom Kantharia, Dist Bharuch.<br>
-(4) Hazrat Maulana Wali sb Surti, Nazim Darul Uloom Kantharia Dist. Bharuch, Gujarat.<br>
-(5) Late Haji Yusuf Ahmedji Patel, Manchester.<br>
-(6) Hazrat Maulana Rizwanuddin Sb. Shaikhul Hadith, Jamia Isha'atul Uloom, Akkal Kuwa, Nandurbar, Maharastra.<br>
-(7) Hazrat Maulana Abdussattar sb, Hadith teacher Imdadul Islam Meruth.<br>
-(8) Hazrat Maulana Abdul Samee sb. Qasmi, Principal Jamia Faizul Islam Moti Geer Parsa, Nepal, and spiritual successor of Hazrat Maulana Qari Siddique Sb. Bandwi (R.A).<br>
-(9) Hazrat Maulana Mufti Junaid Alam sb Nadvi & Qasmi, Head Mufti at Imarate Sharia, Phulwari Shari, Patna.<br>
-(10) Hazrat Maulana Mazhar Alam Sb. Qasmi, Hadith teacher : Darul Uloom A'alipoor, Dist. Balsar, along with his companians from Gujarat.<br>
-(11) Hazrat Maulana Nizamuddin sb Qasmi, teacher at Jamia Akkalkuwa, Maharastra.<br>
-(12) Hazrat Maulana Nazrul Mubeen sb Nadvi, spiritual orator at Dhaka mosque, East Champaran.<br>
-(13) Mr. Haji Ghulam Sulaiman Sidat, Neonitan (U.K)<br>
-(14) Hafiz Umar Abdul-Samad, London, U.K. <br>
-(15) Haji Eisa Aman Sb. London, U.K.<br>
-(16) Mr.Haji Yusuf Patel, Barmingham. (U.K)<br>
-(17) Hazrat Maulana Athar Javed sb, Qazi at Darul Qaza Imarate Sharia Dhaka, East Champaran.<br>
-(18) Hazrat Maulana Ataullah sb Mazahiri, teacher at Azad Madrasa, Dhaka, East Champaran.<br>
-(19) Hazrat Maulana Bashirul Haque sb Qasmi, Garhwa Bazar, West Champaran.<br>
-(20) Mr. Haji Abu Bakar Ismail sb, Manchester.<br>
-(21) Maulana Umar Abu Bakar Ismail sb, Manchester.<br>
-(22) Mr. Maulana Hammad sb, Manchester.<br>
-(23) Mr. Abdullah Qazi sb, Manchester.<br>
-(24) Hazrat Maulana Abdul Ghani Sb. Manchester, U.K. <br>
-(25) Hazrat Maulana Ghulam Rasul Sb. Kosamba, Dist. Surat.<br>
-(26) Hazrat Maulana Ayyub Sb. Panoli, teacher: Jamia Kharod, Dist. Bharuch.<br>
-(27) Hafiz Sayeed Sb. Kapodrawi, Dist Bharuch.<br>
-(28) Hazrat Maulana Hussamuddin Sb, Ankleshwar, Dist Bharuch, <br>
-(29) Mr. Haji Mohd. Bhai Bhayyat Sb. Nenitun U.K.<br>
-(30) Alhaj Ayyub Faincy Sb. Kosamba, Dist. Surat.<br>
-(31) Mr. Belal Abdul Qadir Sidat Sb. Kosamba, Dist. Surat. <br>
-(32) Shabbir Dawood Patel Sb. Ankleshwar, Dist. Bharuch. <br>
-(33) Mr. Haji Hanif Bhai Kapadia Sb. Kathor, Dist Surat. <br>
-(34) Janab Haji Abdul Aziz Patel Sb. Kathor, Dist. Surat. <br>
-(35) Mr. Haji Ismailbhai Patel, Italwa, Dist Surat.
+(1) Mufakkire Islam, Muhaddith of his time, Hazrat Maulana Sayyed Mohd. Salman Sb (Principal: Jamia Mazaihir Uloom, Saharanpur. U.P) <br>
+(2) Hazrat Maulana Muhammad Sufiyan Sb Qasmi
+Mahtamim Darul Uloom, Waqf. Deoband, District. Saharanpur, UP.<br>
+(3) Hazrat Maulana Sayyad Mahmood Asad Madani Sb.
+President. Jamiat Ulama Hind New Delhi.<br>
+(4) Hazrat Maulana Hakimuddin Sb Qasmi 
+General Secretary, Jamiat Ulama Hind, Delhi.<br>
+(5) Hazrat Maulana Khalid Saifulla Rahmani Sb
+General secretary Muslim personal law board India.<br>
+(6) Hazrat Maulana Peer Talha Sb kandhlavi.
+Janasheen Shaikul Hadis Hazrat Maulana Zakariya Rahmatullah.<br>
+( 7 ) Hazrat Mo. Mufti Ashraf Abbas Sa. Ustad - e - Hadith Jamia Mazhare Sa'dat Hansot , Di.Bharcuh. <br>
+(8) Hazrat Maulana Ibrahim Sb. Mazahiri, Mohtamim Jamia Oasm Kharod, Dist Bharuch, Gujarat.<br>
+(9) Hazrat Maulana Abdussattar sb, Hadith teacher Imdadul Islam Meruth.<br>
+(10) Hazrat AlHa Maulana Mufti Mahfuzur Rahman Usmani Sb
+Bani w Mohtamim Jamiatul Qasim Darul Uloom Al Ialamiya Madhubani, District. Supaul Bihar.<br>
+(11) Hazrat Maulana Anisur Rahman Sahab Qasmi
+Nazim Imarat Shariya Phulwari Sharif, Patna, Bihar.<br>
+(12) Hazrat Maulana Ibrahim sb Choksi, Hadith & Tafseer teacher at Darul Uloom Kantharia, Dist Bharuch.<br>
+(13) Hazrat Maulana Wali sb Surti, Nazim Darul Uloom Kantharia Dist. Bharuch, Gujarat.<br>
+(14) Late Haji Yusuf Ahmedji Patel, Manchester.<br>
+(15) Hazrat Maulana Rizwanuddin Sb. Shaikhul Hadith, Jamia Isha'atul Uloom, Akkal Kuwa, Nandurbar, Maharastra.<br>
+(16) Hazrat Maulana Abdul Samee sb. Qasmi, Principal Jamia Faizul Islam Moti Geer Parsa, Nepal, and spiritual successor of Hazrat Maulana Qari Siddique Sb. Bandwi (R.A)<br>
+(17) Hazrat Maulana Mufti Junaid Alam sb Nadvi & Qasmi, Head Mufti at Imarate Sharia, Phulwari Shari, Patna.<br>
+(18) Hazrat Maulana Mazhar Alam Sb. Qasmi, Hadith teacher : Darul Uloom A'alipoor, Dist. Balsar, along with his companians from Gujarat.<br>
+(19) Hazrat Maulana Nizamuddin sb Qasmi, teacher at Jamia Akkalkuwa, Maharastra.<br>
+(20) Hazrat Maulana Nazrul Mubeen sb Nadvi, spiritual orator at Dhaka mosque, East Champaran.<br>
+(21) Mr. Haji Ghulam Sulaiman Sidat, Neonitan (U.K).<br>
+(22) Hafiz Umar Abdul-Samad, London, U.K. <br>
+(23) Haji Eisa Aman Sb. London, U.K.<br>
+(24) Mr.Haji Yusuf Patel, Barmingham. (U.K)<br>
+(25) Hazrat Maulana Athar Javed sb, Qazi at Darul Qaza Imarate Sharia Dhaka, East Champaran.<br>
+(26) Hazrat Maulana Ataullah sb Mazahiri, teacher at Azad Madrasa, Dhaka, East Champaran.<br>
+(27) Hazrat Maulana Bashirul Haque sb Qasmi, Garhwa Bazar, West Champaran.<br>
+(28) Mr. Haji Abu Bakar Ismail sb, Manchester.<br>
+(29) Maulana Umar Abu Bakar Ismail sb, Manchester.<br>
+(30) Mr. Maulana Hammad sb, Manchester.<br>
+(31) Mr. Abdullah Qazi sb, Manchester.<br>
+(32) Hazrat Maulana Abdul Ghani Sb. Manchester, U.K. <br>
+(33) Hazrat Maulana Ghulam Rasul Sb. Kosamba, Dist. Surat.<br>
+(34) Hazrat Maulana Ayyub Sb. Panoli, teacher: Jamia Kharod, Dist. Bharuch.<br>
+(35) Hafiz Sayeed Sb. Kapodrawi, Dist Bharuch.<br>
+(36) Hazrat Maulana Hussamuddin Sb, Ankleshwar, Dist Bharuch, 
+(37) Haji Mohd. Bhai Bhayyat Sb. Nenitun U.K.<br>
+(38) Alhaj Ayyub Faincy Sb. Kosamba, Dist. Surat.<br>
+(39) Mr. Belal Abdul Qadir Sidat Sb. Kosamba, Dist. Surat. <br>
+(40) Shabbir Dawood Patel Sb. Ankleshwar, Dist. Bharuch. <br>
+(41) Haji Hanif Bhai Kapadia Sb. Kathor, Dist Surat. <br>
+(42) Haji Abdul Aziz Patel Sb. Kathor, Dist. Surat. <br>
+(43) Haji Ismail Bhai Patel, Italwa, Dist Surat.<br>
+(44) Alhaj Mohamed Bhai, Topaz Travels , Ankleshwar , Dist . Bharuch <br>
+(45) Hazrat Mo. Ismail Sb . Stanger South Africa <br>
+(46) Hazrat Mufti Sanaul Huda Qasmi ( Vice Nazim Imarate Sharia , Patna , Bihar ) <br>
+(47) Hazrat Maulana Qari Bashir Sa. ( Madarsa Qurania Simra , West Champaran , Bihar <br>
+(48) Bhai Aarif Mohammed Bapu , Preston.<br>
+(49) Maulana Qari Abdul Rauf SB.
+Nazim Madarsa Tajweedul Quran East. Champaran Bihar.<br>
+(50) Janab Abbas Ahmad Patel Sb.
+Kathor, District Surat Gujarat.<br>
+(51) Hazrat Maulana Shamsuddin Sahab 
+Shaikh ul Hadees Jamia Islamia Jalaliya Hojai Assam.<br>
+(52) Janab Advocate Suleman Patel Sb.
+Kosamdi, District. Bharuch, Gujarat.<br>
+(53) Maulana Nazar Tauheed SB.
+Mohtamim Jamia Rashidululoom Chatra Jharkhand.<br>
+(54) Janab Al Haj Bhai Khalid Maniyar SB.
+District. Surat, Gujarat.<br>
+(55) Maulana Muhammad Rafique Alam Sb.
+All India Makaatib, Idara Didiyyat, Mumbai Central, Nagpada. Mumbai.<br>
+(56) Hazrat Maulana Ibrahim Sb Pandor.
+South Africa.<br>
+(57) Janab Bhai Gulam Nabi Koya (Babu Bhai).
+Canada.<br>
+(58) Dr. Mohammed Tabrez Aziz Sb.
+Director Rahmania Medical Centre Motihari, Bihar.<br>
+(59) Hazrat Maulana Margubur Rahman Sb.
+Sadar Raabta e Madaris e Islamia, Bihar.<br>
+(60) Maulana Doctor Abul Kalam Qasmi Shamsi.
+Former Principal Madarsa Islamia shamsul Hoda, Patna. Bihar.<br>
+(61) Hazrat Maulana Shaukat Ali Sb Qasmi. 
+Nazim All India Raabta Madaris-e Islamia Darluloom Deoband.<br>
+(62) Janab Sabir Ali Sahab.
+Member of parliament.<br>
+(63) Janab Qari Sohaib Alam Sb.
+MLC of Bihar.
 
 </p>
 <div class="text-center">
