--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,7 @@
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 <li><a href="index.html">Home</a></li>
 <li><a href="about-us.html">About Us</a></li>
-<li><a href="#">Ilyas 20</a></li>
+<li><a href="ilyas20.html">Ilyas 20</a></li>
 <li><a href="our-visitors.html">Our Visitors</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="contact.html">Contact Us</a></li>
@@ -98,6 +98,25 @@ The nation should also pay special attention to this.  It is kindly requested to
 
 
 </p>
+
+
+
+<div>
+  <iframe src="files/jamia_pdf.pdf" style="width:100%;height:700px;image-responsive;"></iframe>
+</div>
+
+
+
+<p>
+
+
+
+
+</p>
+
+
+
+
 <div class="text-center">
 </div>
 </div>
