--- a/about-us.html
+++ b/about-us.html
@@ -30,7 +30,10 @@
 <div class="bar-mail">
 <i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>info@charityhope.com</strong>
 -->
+<p>
 
+<img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/>
+</p>
 <marquee style="color:white;font-size:x-large;font-weight:bold;">WELCOME TO JAMIA ZAKARIYYA DHAKA, EAST CHAMPARAN BIHAR (INDIA)</marquee>
 
 </div>
@@ -53,7 +56,11 @@
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 <i class="fa fa-bars"></i>
 </button>
+<!--
 <a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/></a>
+-->
+
+
 </div>
 <div class="collapse navbar-collapse" id="navbar-menu">
 
