--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,11 @@
 <i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>info@charityhope.com</strong>
 -->
 
+
+<p>
+
+<img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/>
+</p>
 <marquee style="color:white;font-size:x-large;font-weight:bold;">WELCOME TO JAMIA ZAKARIYYA DHAKA, EAST CHAMPARAN BIHAR (INDIA)</marquee>
 
 </div>
@@ -53,14 +58,19 @@
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 <i class="fa fa-bars"></i>
 </button>
+
+<!--
 <a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/></a>
+-->
+
+
 </div>
 <div class="collapse navbar-collapse" id="navbar-menu">
 
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 <li><a href="index.html">Home</a></li>
 <li><a href="about-us.html">About Us</a></li>
-<li><a href="#">Ilyas 20</a></li>
+<li><a href="ilyas20.html">Ilyas 20</a></li>
 <li><a href="our-visitors.html">Our Visitors</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="contact.html">Contact Us</a></li>
@@ -98,7 +108,8 @@
 </div>
 <h3>PHONE</h3>
 <div class="fancy-box-content">
-<p>Phone 01: +91-8002080060
+<p>Phone 01: +91-8002080060<br>
+    Phone 02: +91-7366018786
 </p>
 </div>
 </div>
@@ -110,7 +121,7 @@
 </div>
 <h3>ADDRESS</h3>
 <div class="fancy-box-content">
-<p>Jamia Zakariya Dhaka, East Champaran<br> Bihar -845401 ( INDIA ).
+<p>Jamia Zakariya Dhaka, East Champaran<br> Bihar -845418 ( INDIA ).
 </p>
 </div>
 </div>
@@ -122,7 +133,7 @@
 </div>
 <h3>EMAIL</h3>
 <div class="fancy-box-content">
-<p>ahmed.shaikh58@gmail.com</p>
+<p>jamiazakariyya5@gmail.com</p>
 </div>
 </div>
 </div>
@@ -187,7 +198,7 @@
 						<h4 class="footer-section-title">Contact Us</h4><!-- /.footer-section-title -->
 						
 						<div class="footer-section-body">
-							<p><b>Address:</b> Jamia Zakariya Dhaka, East Champaran, Bihar -845401 ( INDIA ) </p>
+							<p><b>Address:</b> Jamia Zakariya Dhaka, East Champaran, Bihar -845418 ( INDIA ) </p>
 
 							<div class="footer-contacts">
 								<p>
