--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,11 @@
 <i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>info@charityhope.com</strong>
 -->
 
+<p>
+
+<img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/>
+</p>
+
 <marquee style="color:white;font-size:x-large;font-weight:bold;">WELCOME TO JAMIA ZAKARIYYA DHAKA, EAST CHAMPARAN BIHAR (INDIA)</marquee>
 
 </div>
@@ -54,7 +59,11 @@
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 <i class="fa fa-bars"></i>
 </button>
+
+<!--
 <a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/></a>
+
+-->
 </div>
 <div class="collapse navbar-collapse" id="navbar-menu">
 
@@ -62,7 +71,7 @@
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 <li><a href="index.html">Home</a></li>
 <li><a href="about-us.html">About Us</a></li>
-<li><a href="#">Ilyas 20</a></li>
+<li><a href="ilyas20.html">Ilyas 20</a></li>
 <li><a href="our-visitors.html">Our Visitors</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="contact.html">Contact Us</a></li>
