--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 <div class="bar-mail">
 <i class="fa fa-envelope"></i> <span>Mail Us :</span> <strong>info@charityhope.com</strong>
 -->
+<p>
+
+<img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/>
+</p>
 
 <marquee style="color:white;font-size:x-large;font-weight:bold;">WELCOME TO JAMIA ZAKARIYYA DHAKA, EAST CHAMPARAN BIHAR (INDIA)</marquee>
 
@@ -53,13 +57,15 @@
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 <i class="fa fa-bars"></i>
 </button>
+<!--
 <a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="margin-top:2rem;width:100%;"/></a>
+-->
 </div>
 <div class="collapse navbar-collapse" id="navbar-menu">
 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 <li><a href="index.html">Home</a></li>
 <li><a href="about-us.html">About Us</a></li>
-<li><a href="#">Ilyas 20</a></li>
+<li><a href="ilyas20.html">Ilyas 20</a></li>
 <li><a href="our-visitors.html">Our Visitors</a></li>
 <li><a href="gallery.html">Gallery</a></li>
 <li><a href="contact.html">Contact Us</a></li>
@@ -100,11 +106,29 @@
              </div>
             <!-- Item 4 -->
             <div class="item slide4">
-                      <!--  <h2 data-animation="animated bounceInDown"><span>Raise your funds for a cause</span></h2>
-                        <h3 data-animation="animated bounceInDown">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.!</h3>
+                      <!--   <h2 data-animation="animated bounceInDown"><span>HOSTEL OF JAMIA ZAKARIYYA<br> DHAKA CHAMPARAN BIHAR INDIA</span></h2>
+                       <h3 data-animation="animated bounceInDown">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.!</h3>
                         <h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             -->
              </div>
             <!-- End Item 4 -->
+			
+			
+			
+			
+			
+			
+			<!-- Item 4 -->
+            <div class="item slide4">
+                      <!--   <h2 data-animation="animated bounceInDown"><span>HOSTEL OF JAMIA ZAKARIYYA<br> DHAKA CHAMPARAN BIHAR INDIA</span></h2>
+                       <h3 data-animation="animated bounceInDown">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.!</h3>
+                        <h4 data-animation="animated bounceInUp"><a href="about-us.html">READ MORE</a></h4>             -->
+             </div>
+            <!-- End Item 4 -->
+			
+			
+			
+			
+			
     
         </div>
         <!-- End Wrapper for slides-->
@@ -130,8 +154,13 @@
 Without doubt, Deeni Madaris are not only for preservation of Deen and Islam, but also they have an important and distinguished role in the formation of a good society. Jamia Zakariyya is of the same kind, serving and imparting education since last few years in East Champaran, Bihar. Jamia Zakariyya is working as per the guide lines directed by great Ulama and wise people of the nation. Jamia Zakariyya has done in the last few years eye opening services in the field of education and Dawat and Tabligh. Different Makatib are running in different regions wherein thousands of students are extinguishing their educational thirst. Jamia is also working in different fields as to sponsorship of widows, marriage of poor girls, scholarships for the poor students and different other social and inhabitation activities. Jamia Zakariyya is heading towards its destination with pomp and show. It stands in financial and moral crying needs in order to precede all religious activities. Well wishers are requested to participate in different activities and try their level best for its strength. Jamia spends Zakat, Sadagat and donations sparingly. All are requested to take part in the activities of Jamia, and to direct other people's attentions to it. Allah will make it (insha Allah) a cause for salvation in the hereafter.</p>
 <br>
 
-<p align="left" style="font-size:large;font-weight:bold;text-align:justify; ">
+<p >
+
 <img src="images/mufti-sb.jpg" class="img-responsive" align="left"  style="margin:0rem;width:10%;"/>
+</p>
+
+<p align="left" style="font-size:large;font-weight:bold;text-align:justify; ">
+
 &nbsp;&nbsp;
 
 MUFTI MOHAMMAD AHMED QASMI. <br>
