--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+	<!DOCTYPE HTML>
 <html class="no-js" lang="de">
 <head>
 <meta charset="utf-8">
@@ -159,13 +159,13 @@ Without doubt, Deeni Madaris are not only for preservation of Deen and Islam, bu
 <img src="images/mufti-sb.jpg" class="img-responsive" align="left"  style="margin:0rem;width:10%;"/>
 </p>
 
-<p align="left" style="font-size:large;font-weight:bold;text-align:justify; ">
+<p align="left" style="font-size:large;font-weight:bold;text-align:start;margin-left:50px; ">
 
-&nbsp;&nbsp;
+
 
 MUFTI MOHAMMAD AHMED QASMI. <br>
-&nbsp;&nbsp;&nbsp;Mohtamim of Jamia Zakariyya, Dhaka.<br> 
-&nbsp;&nbsp;&nbsp;Dist. East Champaran, Bihar (India).</p>
+Mohtamim of Jamia Zakariyya, Dhaka.<br> 
+Dist. East Champaran, Bihar (India).</p>
 
 
 </div>
