--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html class="no-js" lang="de">
 <head>
 <meta charset="utf-8">
@@ -226,7 +226,7 @@ Dist. East Champaran, Bihar (India).</p>
 						<h4 class="footer-section-title">Contact Us</h4><!-- /.footer-section-title -->
 						
 						<div class="footer-section-body">
-							<p><b>Address:</b> Jamia Zakariyya Dhaka, East Champaran, Bihar -845401 ( INDIA ) </p>
+							<p><b>Address:</b> Jamia Zakariya Dhaka, East Champaran, Bihar -845418 ( INDIA ) </p>
 
 							<div class="footer-contacts">
 								<p>
