--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Without doubt, Deeni Madaris are not only for preservation of Deen and Islam, bu
 <img src="images/mufti-sb.jpg" class="img-responsive" align="left"  style="margin:0rem;width:10%;"/>
 </p>
 
-<p align="left" style="font-size:large;font-weight:bold;text-align:start;margin-left:50px; ">
+<p align="left" style="font-size:small;text-align:start;margin-left:50px; ">
 
 
 
@@ -242,7 +242,7 @@ Dist. East Champaran, Bihar (India).</p>
 										<i class="fa fa-envelope-o"></i> Email:
 									</b>
 
-									ahmed.shaikh58@gmail.com
+									jamiazakariyya5@gmail.com
 								</p>
 							</div><!-- /.footer-contacts -->
 						</div><!-- /.footer-section-body -->
