--- a/about-us.html
+++ b/about-us.html
@@ -108,8 +108,8 @@ The nation should also pay special attention to this.  It is kindly requested to
 
 
 
-<div>
-  <iframe src="files/jamia_pdf.pdf" style="width:100%;height:700px;image-responsive;"></iframe>
+<div  >
+  <iframe src="files/jamia_pdf.pdf" style="width:100%;height:700px;"  type="application/pdf" ></iframe>
 </div>
 
 
@@ -198,7 +198,7 @@ The nation should also pay special attention to this.  It is kindly requested to
 										<i class="fa fa-envelope-o"></i> Email:
 									</b>
 
-									ahmed.shaikh58@gmail.com
+									jamiazakariyya5@gmail.com
 								</p>
 							</div><!-- /.footer-contacts -->
 						</div><!-- /.footer-section-body -->
