--- a/gallery.html
+++ b/gallery.html
@@ -340,7 +340,7 @@
 										<i class="fa fa-envelope-o"></i> Email:
 									</b>
 
-									ahmed.shaikh58@gmail.com
+									jamiazakariyya5@gmail.com
 								</p>
 							</div><!-- /.footer-contacts -->
 						</div><!-- /.footer-section-body -->
