--- a/ilyas20.html
+++ b/ilyas20.html
@@ -184,7 +184,7 @@ Indian children but also a boon for children who drop out of school due to lack 
 										<i class="fa fa-envelope-o"></i> Email:
 									</b>
 
-									ahmed.shaikh58@gmail.com
+									jamiazakariyya5@gmail.com
 								</p>
 							</div><!-- /.footer-contacts -->
 						</div><!-- /.footer-section-body -->
