--- a/our-visitors.html
+++ b/our-visitors.html
@@ -259,7 +259,7 @@ MLC of Bihar.
 										<i class="fa fa-envelope-o"></i> Email:
 									</b>
 
-									ahmed.shaikh58@gmail.com
+									jamiazakariyya5@gmail.com
 								</p>
 							</div><!-- /.footer-contacts -->
 						</div><!-- /.footer-section-body -->
